// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skipPropsWithName rejects empty array 1`] = `
"react-docgen-typescript-loader

  [4mOptions Validation Error[24m

  [2moptions[22m.skipPropsWithName  [94mshould match some schema in anyOf[39m
  [2moptions[22m.skipPropsWithName  [94mshould NOT have less than 1 items[39m
  [2moptions[22m.skipPropsWithName  [94mshould be string[39m
"
`;

exports[`skipPropsWithName rejects empty string 1`] = `
"react-docgen-typescript-loader

  [4mOptions Validation Error[24m

  [2moptions[22m.skipPropsWithName  [94mshould match some schema in anyOf[39m
  [2moptions[22m.skipPropsWithName  [94mshould be array[39m
  [2moptions[22m.skipPropsWithName  [94mshould NOT be shorter than 1 characters[39m
"
`;

exports[`throws error on unexpected field 1`] = `
"react-docgen-typescript-loader

  [4mOptions Validation Error[24m

  [2moptions[22m['invalidField']  [94mis an invalid additional property[39m
"
`;
